<resources>
    <string name="app_name">BaoBook</string>

    <string name="Login">Login</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="Next">Next\n</string>
    <string name="Password">Password</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="confirm_logout">Confirm logout?</string>
    <string name="mood_input">Mood</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="choose_your_unique_username_and_password">Choose your unique username and password</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_mood">Select Mood</string>
    <string name="search_title">search profiles</string>

    <string-array name="mood_options">
        <item>Anger</item>
        <item>Confusion</item>
        <item>Sadness</item>
        <item>Disgust</item>
        <item>Fear</item>
        <item>Happiness</item>
        <item>Shame</item>
        <item>Surprise</item>
    </string-array>

    <string-array name="social_options">
        <item>Alone</item>
        <item>Pair</item>
        <item>Small group</item>
        <item>Crowd</item>

    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="unfollow">Unfollow</string>
    <string name="requested">Requested</string>
    <string name="follow">Follow</string>

</resources>