<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/background"
    android:weightSum="1">

    <TextView
        android:id="@+id/NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_unique_username_and_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAlignment="center"/>

    <!-- Username Input -->
    <EditText
        android:id="@+id/signup_username_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username"
        android:backgroundTint="@color/white"
        android:autofillHints="Username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:justificationMode="inter_word"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/signup_password_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:hint="@string/Password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"/>

    <!-- Next Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/Next"
        android:layout_marginTop="30dp"
        android:gravity="center"/>

</LinearLayout>
