<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">
    <TextView
        android:id="@+id/NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What's your name?"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:padding="16dp"/>
    <!-- first name and last name inputs -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <!-- first name input -->
        <EditText
            android:id="@+id/FNInput"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:hint="@string/firstName"
            android:autofillHints="FirstName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
        />
        <!-- last name input -->
        <EditText
            android:id="@+id/LNInput"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:hint="@string/lastName"
            android:autofillHints="LastName"
            android:inputType="textPersonName"
            android:minHeight="48dp"
           />
    </LinearLayout>
    <!-- next button -->
    <!-- For some reason the Next text is not centered in the button. -->
    <androidx.appcompat.widget.AppCompatButton
        android:background="@drawable/button_gradient"
        android:textColor="@color/white"
        android:id="@+id/Next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:layout_marginTop="30dp"
        />
</LinearLayout>
